--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <title>Bootstrap v5.1.0</title>
 
     <style>
@@ -57,7 +57,7 @@
             <button class="btn btn-info">Get Started</button>
           </div>
 
-          <img class="d-none d-sm-block img-fluid w-50" src="../img/hero-img.svg" alt="">
+          <img class="d-none d-sm-block img-fluid w-50" src="/img/hero-img.svg" alt="">
         </div>
       </div>
     </section>
@@ -122,7 +122,7 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md">
-          <img src="../img/learn.svg" alt="" class="img-fluid">
+          <img src="/img/learn.svg" alt="" class="img-fluid">
         </div>
         <div class="col-md py-4">
           <h2>Learn the Basics</h2>
@@ -141,7 +141,7 @@
     <div class="container">
       <div class="row align-items-center justify-content-center flex-row-reverse">
         <div class="col-md">
-          <img src="../img/next.svg" alt="" class="img-fluid">
+          <img src="/img/next.svg" alt="" class="img-fluid">
         </div>
         <div class="col-md py-4">
           <h2>Where to go next</h2>
@@ -219,6 +219,6 @@
       </div>
     </footer>
 
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
